# gpt2-local

./: .gitignore  README.md  data.py  gputest.py  implementation.md  inference.py  lora.py  main.ipynb  main.py  model.py  pyproject.toml  requirements.txt  trainer.py  verify.py
